Save transform context for filters

Otherwise we get weird behavior on filters while transforming.

TBR=

Bug: 901759
Change-Id: I1d487f500024a309bdb4002ba19a20387b3bb251
Reviewed-on: https://chromium-review.googlesource.com/c/1329342
Reviewed-by: Fernando Serboncini <fserb@chromium.org>
Commit-Queue: Fernando Serboncini <fserb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606861}