third_party/blink/renderer/modules/canvas/canvas2d/base_rendering_context_2d.h
@@ -489,6 +489,7 @@ void BaseRenderingContext2D::CompositedDraw(
     PaintFlags shadow_flags =
         *GetState().GetFlags(paint_type, kDrawShadowOnly, image_type);
     int save_count = c->getSaveCount();
+    c->save();
     if (filter) {
       PaintFlags foreground_flags =
           *GetState().GetFlags(paint_type, kDrawForegroundOnly, image_type);
